--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@react-jvectormap/world": "^1.1.2",
     "@tanstack/react-table": "^8.21.2",
     "apexcharts": "^4.1.0",
+    "axios": "^1.8.4",
+    "bowser": "^2.11.0",
     "clsx": "^2.1.1",
     "datatables.net-bs5": "^2.2.2",
     "datatables.net-dt": "^2.2.2",
@@ -39,8 +41,10 @@
     "react-router": "^7.1.5",
     "react-router-dom": "^7.5.0",
     "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.3",
-    "tailwind-merge": "^3.0.1"
+    "tailwind-merge": "^3.0.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
