--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-router": "^7.1.5",
     "react-router-dom": "^7.5.0",
     "react-select": "^5.10.1",
+    "react-sweetalert2": "^0.6.0",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.3",
     "tailwind-merge": "^3.0.1",
